tests-integration/tests/roundtrip/invalid/semantic/keyword_as_identifier/02/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/keyword_as_identifier/02/input.essence:1:6:
  |
1 | find bool: bool
  |      ^
Missing <identifier>

tests/roundtrip/invalid/semantic/keyword_as_identifier/02/input.essence:1:6:
  |
1 | find bool: bool
  |      ^
Missing :

tests/roundtrip/invalid/semantic/keyword_as_identifier/02/input.essence:1:10:
  |
1 | find bool: bool
  |          ^
Missing <identifier>

tests/roundtrip/invalid/semantic/keyword_as_identifier/02/input.essence:1:10:
  |
1 | find bool: bool
  |          ^
Missing ,

